# subdivx-dl

./: README-es.md  README.md  pyproject.toml  requirements.txt  setup.py  subdivx-dl  subdivx-dl.spec  subdivx.py
.github/workflows/: build.yml
src/: download.py  help.py  utils.py
subdivx-dl/: main.py  subdivx-dl  utils.py
subdivx_dl/: __init__.py  helper.py  main.py  utils.py  verchk.py  version.py
subdivx_dl/translations/: load_translations.py  translations.json
